tests/baselines/reference/noImplicitAnyMissingGetAccessor.errors.txt
tests/cases/compiler/noImplicitAnyMissingGetAccessor.ts(3,25): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
tests/cases/compiler/noImplicitAnyMissingGetAccessor.ts(3,25): error TS7032: Property 'message' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
tests/cases/compiler/noImplicitAnyMissingGetAccessor.ts(3,33): error TS7006: Parameter 'str' implicitly has an 'any' type.
tests/cases/compiler/noImplicitAnyMissingGetAccessor.ts(8,16): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
tests/cases/compiler/noImplicitAnyMissingGetAccessor.ts(8,16): error TS7032: Property 'message' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
tests/cases/compiler/noImplicitAnyMissingGetAccessor.ts(8,24): error TS7006: Parameter 'str' implicitly has an 'any' type.


==== tests/cases/compiler/noImplicitAnyMissingGetAccessor.ts (6 errors) ====
    abstract class Parent
    {
        public abstract set message(str);
                            ~~~~~~~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
                            ~~~~~~~
!!! error TS7032: Property 'message' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                                    ~~~
!!! error TS7006: Parameter 'str' implicitly has an 'any' type.
    }
    
    class Child extends Parent {
        _x: any;
        public set message(str) {
                   ~~~~~~~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
                   ~~~~~~~
!!! error TS7032: Property 'message' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                           ~~~
!!! error TS7006: Parameter 'str' implicitly has an 'any' type.
            this._x = str;
        }
    }